[tool.poetry]
name = "pyangbind"
version = "0.8.4"
description = ""
authors = ["Rob Shakir <rjs@rob.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyang = "^2.5.0"
lxml = "^4.9.0"
regex = "^2023.8.8"
six = "^1.16.0"
enum34 = "^1.1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"